--- a/0. StarterFiles/index.html
+++ b/0. StarterFiles/index.html
@@ -6,6 +6,10 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Bootstrap Icons CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
+
         <title>Document</title>
         <link rel="stylesheet" href="./styles.css" />
     </head>
