--- a/8. Wave Effect/index.html
+++ b/8. Wave Effect/index.html
@@ -10,10 +10,28 @@
         <!-- Bootstrap Icons CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" />
 
-        <title>Document</title>
+        <title>Form Input Wave</title>
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
+        <div class="container">
+            <h1>Please Login</h1>
+            <form>
+                <div class="form-control">
+                    <input type="text" required />
+                    <label>Email</label>
+                </div>
+
+                <div class="form-control">
+                    <input type="password" required />
+                    <label>Password</label>
+                </div>
+
+                <button class="btn">Login</button>
+                <p class="text">Don't have an account?</p>
+                <a href="#">Register</a>
+            </form>
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
